--- a/04_gemma/Project.toml
+++ b/04_gemma/Project.toml
@@ -4,5 +4,6 @@ HuggingFaceTokenizers = "a6888d44-1185-43bb-bd0f-7806f9976d18"
 ImageCore = "a09fc81d-aa75-5fe9-8630-4744c3626534"
 ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 NNlib = "872c559c-99b0-510c-b3b7-b6c96a88d5cd"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SafeTensors = "eeda0dda-7046-4914-a807-2495fc7abb89"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
